начал делать подпись на паспорте

--- a/dialogauthor.ui
+++ b/dialogauthor.ui
@@ -167,6 +167,16 @@
        </property>
       </widget>
      </item>
+     <item row="3" column="0">
+      <widget class="QCheckBox" name="checkBoxSig">
+       <property name="text">
+        <string>Подпись</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
